<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView android:id="@+id/txt_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            style="@style/TextTitle"
            android:layout_margin="16dp"
            android:layout_centerHorizontal="true"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@+id/txt_title"
            android:padding="16dp">

            <Button android:id="@+id/btn_insert_surfist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_insert_surfist" />

            <Button android:id="@+id/btn_list_surfist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_list_surfists" />

            <Button android:id="@+id/btn_insert_battery"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_insert_battery"/>

            <Button android:id="@+id/btn_winner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_winner"/>

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>